--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,18 @@
-code {
+/* code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
+} */
 
 h1 {
-  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+  font-family:'Montserrat';
 }
+
+h3 {
+  font-family:'Open Sans';
+}
+
+p {
+  font-family:'Noto Sans';
+}
+
+
